crates/sui-graphql-macros/tests/compile/type_validation_option_without_question_mark.rs
use sui_graphql_macros::Response;

#[derive(Response)]
struct R {
    #[field(path = "chainIdentifier")]
    id: Option<String>,
}

fn main() {}
